@@ -53,7 +53,7 @@ $lang['title_album-users'] = "Album-Viewer";
 
 
 /* Sub navigation categories  */
-$lang['title_filemanager-browse']="Durchsuchen";
+$lang['title_filemanager-browse']="Blättern";
 $lang['title_filemanager-backup']="Sicherung";
 $lang['title_filemanager-restore']="Wiederherstellen";
 $lang['title_mail-retrieve']="E-Mail abrufen";
@@ -628,7 +628,7 @@ $lang["Add new download"]="Neuen Download hinzufügen";
 $lang["Every 6 hours"]="Alle 6 Stunden";
 $lang["By Config"]="Durch Config";
 $lang["week"]="Woche";
-$lang["Browse"]="Durchsuchen";
+$lang["Browse"]="Blättern";
 $lang["Channel"]="Kanal";
 $lang["Never expires"]="Verfällt nie";
 $lang["Existing jobs"]="Vorhandene Aufträge";
@@ -812,18 +812,18 @@ $lang["Description"]="Beschreibung";
 $lang["Current backup operations"]="Aktuelle Sicherungsvorgänge";
 
 $lang['weekday-4'] = 'Donnerstag';
-$lang['backup-label-target-path'] = 'Ziel Verzeichnis';
+$lang['backup-label-target-path'] = 'Zielordner';
 $lang['backup-edit-dialog-step4-title'] = 'Backup Plan (Schritt 3 von 4)';
-$lang['backup-label-schedule-disabled'] = 'Gesperrt (manuell starten durch Klick auf "Starten")';
+$lang['backup-label-schedule-disabled'] = 'Nicht geplant (Manuell starten durch Klick auf “Starten”)';
 $lang['backup-create-dialog-step2-title'] = 'Wählen Sie aus, was gesichert werden soll (Schritt 2 von 5)';
 $lang['backup-selection-music'] = 'Musik (/home/storage/music)';
 $lang['weekday-3'] = 'Mittwoch';
-$lang['backup-label-target-server-password'] = 'Password des Ziel Servers';
-$lang['backup-label-target-server-username'] = 'Username des Ziel Servers';
+$lang['backup-label-target-server-password'] = 'Kennwort des Zielservers';
+$lang['backup-label-target-server-username'] = 'Benutzername des Zielservers';
 $lang['Step 3/3: Network setup'] = 'Schritt 3 von 3: Netzwerk Setup';
 $lang['backup-label-schedule-weekly-day'] = 'Wöchentlich';
 $lang['backup-title-schedule-daily-hour'] = 'Tageszeit';
-$lang['backup-selection-custom-browse'] = 'Durchsuchen';
+$lang['backup-selection-custom-browse'] = 'Blättern';
 $lang['backup-selection-video'] = 'Videos (/home/storage/video)';
 $lang['backup-edit-dialog-step5-title'] = 'Sicherheit (Schritt 4 von 4)';
 $lang['backup-label-schedule-hourly'] = 'Stündlich';
@@ -840,7 +840,7 @@ $lang['backup-label-target-server-hostname'] = 'Ziel Server';
 $lang['backup-label-security-enable'] = 'Verschlüsselung der Datensicherung um die Sicherheit zu erhöhen';
 $lang['wizard-msg2'] = 'wizard-msg2';
 $lang['backup-label-name'] = 'Name der Planung';
-$lang['backup-selection-storage'] = 'Storage (/home/storage)';
+$lang['backup-selection-storage'] = 'Speicherung (/home/storage)';
 $lang['backup-label-restore-newdir'] = 'Datenwiederherstellung in einem anderen Verzeichniss zur manuellen Untersuchung (in Bezug auf /home/admin)';
 $lang['backup-edit-dialog-step2-title'] = 'Zu sichernde Daten (Schritt 1 von 4)';
 $lang['backup-create-dialog-step5-title'] = 'Sicherheit (Schritt 5 von 5)';
@@ -851,13 +851,13 @@ $lang['weekday-7'] = 'Sonntag';
 $lang['backup-create-dialog-title'] = 'Neues Backup erstellen';
 $lang['backup-title-schedule-weekly-day'] = 'Wochentag';
 $lang['backup-selection-photo'] = 'Fotos (/home/storage/photos)';
-$lang['backup-selection-email'] = 'E-Mmail (/home/&lt;all users&gt;/Mail)';
+$lang['backup-selection-email'] = 'E-Mail (/home/&lt;all users&gt;/Mail)';
 $lang['backup-edit-dialog-title'] = 'Geplante Datensicherung ändern';
 $lang['backup-title-schedule-monthly-day'] = 'Tag im Monat';
 $lang['weekday-2'] = 'Dienstag';
 $lang['Step 2/3: Create users'] = 'Schritt 2 von 3: Anwender erstellen';
-$lang['title_backup'] = 'Backup / Datensicherung';
-$lang['backup-job-add-button-label'] = 'Neues Backup erstellen';
+$lang['title_backup'] = 'Datensicherung';
+$lang['backup-job-add-button-label'] = 'Neue Datensicherung erstellen';
 $lang['backup-create-dialog-step3-title'] = 'Wählen Sie das Ziel der Datensicherung (Schritt 3 von 5)';
 $lang['backup-note-schedule-timeline'] = 'Je länger Sie die Zeitlinie wählen, desto mehr Speicherplatz wird auf dem Datenspeicher benötigt';
 $lang['weekday-6'] = 'Samstag';
@@ -888,9 +888,11 @@ $lang['Support'] = 'Support';
 $lang['Schedule'] = 'Plan';
 $lang['Default system language'] = 'Vorgegeben System Sprache';
 
-$lang['backup-label-schedule-timeline'] = 'Keep timeline length of';
-$lang['backup-jobs-title'] = 'List of backup job specifications for this machine';
+$lang['backup-label-schedule-timeline'] = 'Ältere Datensicherungen eine Zeit lang behalten, aber wie folgt überschreiben';
+$lang['backup-jobs-title'] = 'Übersicht der geplanten Datensicherungen';
 $lang['backup-label-restore-overwrite'] = 'Revert the content of the files on the B3 to what is given in this backup';
-$lang['backup-job-runs-title'] = 'List of executed runs for selected job specification above';
+$lang['backup-job-runs-title'] = 'Übersicht der ausgeführten Datensicherungen';
 $lang['backup-title-schedule-timeline'] = 'Age of timeline';
-$lang['backup-selection-custom'] = 'custom selection';
+$lang['backup-selection-custom'] = 'Individuelle Auswahl';
+
+$lang['OK'] = 'in Ordnung';
